# sc9k

./: .gitignore  .liccor.yml  CMakeLists.txt  Makefile  README.md  SlideController.pro  consts.hpp  install.sh  main.cpp  mainwindow.cpp  mainwindow.hpp  obs_scene_switcher.py  obsclient.cpp  obsclient.hpp  openlpclient.cpp  openlpclient.hpp  release-notes.md  slideview.cpp  slideview.hpp
iconsrc/project/: SC9K_Logo.npal  SC9K_Logo.nts
src/: CMakeLists.txt  cameraclient.cpp  cameraclient.hpp  consts.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  net.drinkingtea.sc9k.desktop  obsclient.cpp  obsclient.hpp  openlpclient.cpp  openlpclient.hpp  sc9k.rc  settingsdata.cpp  settingsdata.hpp  settingsdialog.cpp  settingsdialog.hpp  slideview.cpp  slideview.hpp
